apps/monitoring/grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.stepanovs.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.stepanovs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-internal
            port:
              name: service
  tls:
  - hosts:
    - grafana.stepanovs.dev
    secretName: grafana-tls
